--- a/index.html
+++ b/index.html
@@ -4,10 +4,130 @@
 <head>
   <meta charset="UTF-8">
   <style>
-    /* 👉 Task 1- Apply the reset found on this page: https://www.joshwcomeau.com/css/custom-css-reset/ */
+   /*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+}
+/*
+  Typographic tweaks!
+  3. Add accessible line-height
+  4. Improve text rendering
+*/
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+/*
+  5. Improve media defaults
+*/
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+  6. Remove built-in form typography styles
+*/
+input, button, textarea, select {
+  font: inherit;
+}
+/*
+  7. Avoid text overflows
+*/
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+/*
+  8. Create a root stacking context
+*/
+#root, #__next {
+  isolation: isolate;
+}
 
   </style>
   <style>
+
+    body{
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    #headerTop{
+  color:white;
+  background-color:grey;
+  padding: 0.5rem;
+}
+#headerTop > div {
+    display: inline-block;
+}
+.headerSpan{
+  margin-right: 20px;
+}
+
+.headerSpan:nth-of-type(1){
+  font-weight: bold;
+  text-transform: uppercase;
+}
+#headerBottom{
+border-bottom: 1px solid grey;
+padding: 0.5rem;
+}
+#headerBottom > div{
+  display: inline-block;
+}
+#headerBottom > div:nth-of-type(1){
+  color: white;
+  font-weight: bold;
+  background-color: grey;
+  padding: 0.4rem;
+  border-radius: 4px;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+.active{
+margin-right: 1rem;
+cursor: pointer;
+padding: 0px;
+border: none;
+background: none;
+border-bottom: 2px solid grey;
+
+}
+.active:nth-of-type(1){
+  font-weight: bold;
+}
+
+.email {
+  display: flex;
+  padding: 10px 10px 10px 20px; 
+  border-bottom: 1px solid #ccc;
+  
+}
+
+.email-name,
+.email-subject {
+  width: 35%;
+}
+
+.email-date,
+.email-size,
+.email-check {
+  width: 8%;
+}
+.email:nth-child(2) {
+  font-weight: bold;
+}
+
+
+
+
+ 
     /* 👉 Task 2- Target the body element.
     Apply a font family of Arial to the body element.
     The font property is inherited by descendant (nested) elements. */
@@ -68,18 +188,18 @@
 
 <body>
   <div id="instructions">
-    <h1>HTML & CSS II</h1>
+   <!--  <h1>HTML & CSS II</h1>
     <p>Please load this file in VSCode and Chrome, and open the Elements tab, Sources sub-tab, in Chrome Dev Tools.</p>
     <p>Work through the challenges found inside both style tags in this document.</p>
     <p>You will find a screenshot of the end result inside the design folder.</p>
-    <p>You can now comment out the h1 and the p tags...</p>
+    <p>You can now comment out the h1 and the p tags...</p> -->
   </div>
   <div>
     <header>
       <div id="headerTop">
         <div>
-          <span>Super Mail</span>
-          <span>Jess</span>
+          <span class="headerSpan">Super Mail</span>
+          <span class="headerSpan">Jess</span>
         </div>
         <div>
           <input type="text" placeholder="Search Mail" />
@@ -88,10 +208,10 @@
       <div id="headerBottom">
         <div>Compose</div>
         <div>
-          <button>All mail</button>
-          <button>Unread</button>
-          <button>Pinned</button>
-          <button>VIPs</button>
+          <button class="active">All mail</button>
+          <button class="active">Unread</button>
+          <button class="active">Pinned</button>
+          <button class="active">VIPs</button>
         </div>
       </div>
     </header>
